[package]
name = "ogl"
authors = ["Seimizu Joukan <joukan.seimizu@gmail.com>"]
repository = "https://github.com/saimizi/ogl-rs"
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
name = "libogl"

[[bin]]
path = "src/main.rs"
name = "ogl"

[dependencies]
clap = { version = "4.4.7", features = ["derive", "cargo", "help"] }
error-stack = "0.4.1"
gl33 = { version = "0.2.1", optional = true }
glam = "0.25.0"
glow = { version = "0.13.0", optional = true }
jlogger-tracing = "0.1.4"
#khronos-egl = { version = "6.0.0", features = ["static"] }
khronos-egl = { version = "6.0.0", features = ["dynamic"] }
libc = "0.2.150"
libloading = "0.8.1"
libm = "0.2.8"
once_cell = "1.18.0"
rand = "0.8.5"
rustix = { version = "0.38.26", features = ["event"] }
sdl2 = "0.35.0"
stb_image = "0.3.0"
tempfile = "3.8.1"
wayland-client = "0.31.1"
wayland-egl = "0.32.0"
wayland-protocols = { version = "0.31.0", features = [
  "client",
  "wayland-client",
] }

[features]
default = ["enable_gl33"]
enable_gl33 = ["gl33"]
enable_glow = ["glow"]
